update_1_index.html

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,7 +1,16 @@
 /*************** HOME **********************/
 
 .background-image-divider{
-    background-image: url(/assets/images/home/home2.jpg);
+  /*  background-image: url("/assets/images/home/home2.jpg");*/
+    background-size: cover;
+    background-repeat: no-repeat;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 5;
+ }
+.background-image-divider img{
     background-size: cover;
     background-repeat: no-repeat;
     left: 0;
